Rails3: view: other_formats_links: app/views/wiki/show.html.erb
--HG--
branch : rails3-straight-20111015-4-hg-git
extra : transplant_source : %EF%92%25%A8%94%EEH%DB%CF%E19%F3%ADZ%C1%D2a%1AR%BD

--- a/app/views/wiki/show.html.erb
+++ b/app/views/wiki/show.html.erb
@@ -52,9 +52,9 @@
 </div>
 <% end %>
 
-<% other_formats_links do |f| %>
-  <%= f.link_to 'HTML', :url => {:id => @page.title, :version => @content.version} %>
-  <%= f.link_to 'TXT', :url => {:id => @page.title, :version => @content.version} %>
+<%= other_formats_links do |f| %>
+  <% f.link_to 'HTML', :url => {:id => @page.title, :version => @content.version} %>
+  <% f.link_to 'TXT', :url => {:id => @page.title, :version => @content.version} %>
 <% end if User.current.allowed_to?(:export_wiki_pages, @project) %>
 
 <% content_for :header_tags do %>
